# my-beads-box

./: .pre-commit-config.yaml  LICENSE  README.md  TODO  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: poetry.yaml  pytest.yaml
mybeadsbox/: manage.py
mybeadsbox/mybeadsbox/: asgi.py  settings.py  urls.py  wsgi.py
mybeadsbox/vouchers/: forms.py  models.py  operations.py  urls.py  utils.py  views.py
mybeadsbox/vouchers/migrations/: 0001_create_voucher_models.py  0002_create_initial_voucher_templates.py  0003_denormalize_template_data.py
mybeadsbox/vouchers/templates/: admin_vouchers.html  base.html  create_template.html  edit_template.html  purchase_voucher.html  templates.html  vouchers.html
mybeadsbox/vouchers/tests/: test_models.py  test_operations.py  test_utils.py  test_views.py
